# VTKWriter

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  conanfile.py  main.cpp
benchmarks/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
include/: VTKWriter.h
include/VTKWriter/: VTKWriter.h
scr/: VTKWriter.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
